# Martian-Terrain-Sematic-Segmentation

./: .gitignore  README.md  dataloader.py  distillation.py  explainability.py  martian_segmentation_explainability.ipynb  models.py  optimizers.py  pyproject.toml  train_utils.py  uncertainty.py
.github/workflows/: deploy-book.yml
_build/logs/: myst.build.json
docs/: _config.yml  _toc.yml  conf.py  index.md
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree  martian_segmentation_explainability.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  martian_segmentation_explainability.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst
docs/_build/html/_static/: custom.css
outputs/: student_kd_training_history.csv  teacher_training_history.csv
src/martian_terrain_segmentation/: __init__.py  distillation.py  explainability.py  models.py  optimizers.py  train_utils.py
src/martian_terrain_segmentation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
