[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "martian_terrain_segmentation"
version = "0.1.0"
description = "Utils to showcase Martian terrain semantic segmentation with explainability."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
